messenger-chart/templates/networking/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: messenger-cluster-headless
spec:
  clusterIP: None
  selector:
    app: messenger-cluster
  ports:
    - name: remoting
      port: 25520
    - name: management
      port: 8558
