messenger-chart/templates/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
    - host: "messenger.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messenger-gateway-service
                port:
                  number: 80
